--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -2,11 +2,11 @@
    I want to play
 </button>
 
-<button mat-raised-button  *ngIf="users_found" color="primary" (click)="showQuestions()">Let's Play</button>
+<!-- <button mat-raised-button  *ngIf="users_found" color="primary" (click)="showQuestions()">Let's Play</button> -->
 
 
 <div *ngIf="start && !gameOver">
-      <mat-card class="questions">
+      <!-- <mat-card class="questions">
          <h2>{{currentQuestion.questionGiven}}</h2>
          <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button>
          <br>
@@ -16,8 +16,9 @@
              </mat-radio-button>
          </mat-radio-group>
          <br>
-         <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
-      </mat-card>
+         <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button>
+      </mat-card> -->
+      <mat-card>{{currentQuestion}}</mat-card>
 
       <mat-grid-list cols="2" rowHeight="5:1">
         <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
