--- a/src/app/three-players/three-players.component.html
+++ b/src/app/three-players/three-players.component.html
@@ -2,7 +2,7 @@
   I want to play
 </button>
 
-<button mat-raised-button *ngIf="users_found"  color="primary" (click)="showQuestions()">Let's Play</button>
+<!-- <button mat-raised-button *ngIf="users_found"  color="primary" (click)="showQuestions()">Let's Play</button> -->
 
 <div class="abc" *ngIf="counter>=1 && !gameOver">
   <mat-card class="mc">
