--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -14,7 +14,7 @@
      </mat-card>
 
      <mat-card class="score">
-        <h3> Your Score is {{score}} </h3>
+        Your Score is {{score}} 
      </mat-card>
 </div>
 
