--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -21,13 +21,15 @@ button:hover{
   .homepage{
     /* background-image: url('/src/assets/img/3.jpg'); */
      background-position: fixed;
-     background-size:100%;
+     /* background-size:100%; */
+     background-size:contain;
     min-height: -webkit-fill-available;
   }
 
   button{
     margin-top:1rem;
-    margin-left: 5.5rem;
+    /* margin-left: 5.5rem; */
+    margin-left: 25%;
   }
 
   .logo{
@@ -35,11 +37,13 @@ button:hover{
     width: 188px;
     height: 235px;
     margin-top:2rem;
-    margin-left: 4.5rem;
+    /* margin-left: 4.5rem; */
+    margin-left: 25%;
   }
 
   .login{
-    margin-left: 7.5rem;
+    margin-left: 35%;
+    /* margin-left: 7.5rem; */
   }
 
 }
