--- a/src/app/four-players/four-players.component.css
+++ b/src/app/four-players/four-players.component.css
@@ -1,7 +1,7 @@
 #clock{
   width:10rem;
   background-color: black;
-  font-family: cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 2rem;
   color:white;
   text-align: center;
@@ -11,7 +11,7 @@
   margin-right: 40%;
 }
 
-.mc{
+.questions{
   width:80%;
   height: 30rem;
   background-color: aqua;
@@ -20,14 +20,17 @@
   background-size: cover;
   margin-left:10rem;
   border-bottom:5rem;
+  color: white;
+  font-family: 'Roboto', sans-serif;
  }
 
+/* 
 
 .abc
 {
 text-align:center;
 justify-content:center;
-}
+} */
 
 .radio-group{
   display: inline-flex;
@@ -40,20 +43,23 @@ justify-content:center;
 mat-grid-list{
   width: 80%;
   margin-left: 10rem;
-font-size: 20px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 @media(max-width:600px){
-  .mc{
+  .questions{
     width:80%;
     height: 20rem;
     /* background-color: aqua; */
-    background-image: url('/src/assets/img/1.jpg');
+    background-image: url('/src/assets/img/single.jpg');
     background-size: cover;
     margin-left:2rem;
     border-bottom:1rem;
     font-size: 15px;
+    color: white;
    }
+
    mat-grid-list{
     width: 80%;
     height: 5rem;
@@ -62,14 +68,15 @@ font-size: 20px;
   }
 
     .ques{
-      font-size:20px;
+    font-size:20px;
+     font-family:'Roboto', sans-serif; 
     }
 
     #clock{
 
       width:25rem;
       background-color: black;
-      font-family: cursive;
+      font-family: 'Roboto', sans-serif;
       font-size: 2rem;
       color:white;
       text-align: center;
