--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 @media(max-width:600px){
   .login{
-    width: 100%;
-    height: 70%;
+    width: auto;
+    height: auto;
     overflow: hidden;
   }
 }
