--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -1,6 +1,3 @@
-.chat{
-  float:right;
-}
 
 mat-list-item{
 margin-bottom: 5rem;
@@ -32,7 +29,7 @@ button:hover{
 
 @media(max-width: 600px){
   .play{
-    background-image: url('/src/assets/img/single.jpg');
+    background-image: url('/src/assets/img/3.jpg');
     background-position: fixed;
     background-size: 100%;
     min-height: -webkit-fill-available;
