--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -1,7 +1,7 @@
 #clock{
   width:10rem;
   background-color: black;
-  font-family: cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 2rem;
   color:white;
   text-align: center;
@@ -20,6 +20,7 @@
   background-size: cover;
   margin-left:10rem;
   border-bottom:5rem;
+  font-family: 'Roboto', sans-serif;
  }
 
 .score{
@@ -32,7 +33,7 @@
  /* border-bottom:5rem; */
  color: white;
  font-size: 40px;
- font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ font-family: 'Roboto', sans-serif;
  }
 
 
@@ -72,6 +73,7 @@ button:hover{
 
 .question{
   color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
 img{
@@ -88,6 +90,7 @@ img{
     margin-left:2rem;
     border-bottom:1rem;
     font-size: 15px;
+    font-family: 'Roboto', sans-serif;
    }
    .score{
     width:80%;
@@ -97,10 +100,12 @@ img{
     margin-left:2rem;
     color:black;
     font-size: 20px;
+    font-family: 'Roboto', sans-serif;
     }
 
     .question{
       font-size:20px;
+      font-family:  'Roboto', sans-serif;
       color: white;
     }
 
