--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,49 +1,93 @@
 .homepage{
-  /* background-image: url('/src/assets/img/full.jpg'); */
-   background-position: fixed;
-   background-size:100%;
+  background-image: url('/src/assets/img/bg.jpg');
+  background-position: fixed;
+  background-size:cover;
   min-height: -webkit-fill-available;
+  width: 100%;
+  /* margin: auto; */
 }
 
 button{
   margin-top:10rem;
-  margin-left: 20rem;
-  /* width:5rem; */
+  margin-left: 20%; 
   height:3rem;
+  font-size: 25px;
+  text-align: center;
+  display: block;
 }
 
-button:hover{
+.homepage button:hover{
   background:rgb(238, 122, 87);
   color:white;
 }
 
+
+@media(max-width: 1024px){
+  .homepage{
+    background-image: url('/src/assets/img/bg.jpg');
+    background-position: fixed;
+    background-size:cover;
+    min-height: -webkit-fill-available;
+    width: 100%;
+    /* margin: auto; */
+  }
+}
+
 @media(max-width: 600px) {
   .homepage{
-    /* background-image: url('/src/assets/img/3.jpg'); */
-     background-position: fixed;
-     /* background-size:100%; */
-     background-size:contain;
+    background-image: url('/src/assets/img/p6.jpg');
+    background-position: fixed;
+    background-size:contain;
     min-height: -webkit-fill-available;
+    margin: auto;
   }
 
   button{
-    margin-top:1rem;
-    /* margin-left: 5.5rem; */
-    margin-left: 25%;
+   margin-top:15%;
+   margin-left: 25%;   
+   background-color: black;
+   color: white;
+   text-align: center;
   }
 
   .logo{
-    background-image: url('/src/assets/img/logo_1.png');
-    width: 188px;
-    height: 235px;
-    margin-top:2rem;
-    /* margin-left: 4.5rem; */
-    margin-left: 25%;
+    background-image: url('/src/assets/img/logo2.png');
+    width: 241px;
+    height: 241px;
+    background-repeat: no-repeat;
+    margin: auto;
   }
 
   .login{
     margin-left: 35%;
-    /* margin-left: 7.5rem; */
+  }
+}
+
+
+@media(max-width: 768px) {
+  .homepage{
+    background-image: url('/src/assets/img/p6.jpg');
+    background-position: fixed;
+    background-size:contain;
+    min-height: -webkit-fill-available;
   }
 
+  button{
+    background-color: black;
+    color: white;
+    display: inline;
+    padding: 15px 32px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .logo{
+    background-image: url('/src/assets/img/logo2.png');
+    width: 241px;
+    height: 241px;
+    background-repeat: no-repeat;
+    margin: auto;
+  }
 }
+
