--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -1,4 +1,3 @@
-
 mat-list-item{
 margin-bottom: 5rem;
 margin-left:5rem;
@@ -8,13 +7,14 @@ margin-left:5rem;
 background-image: url('/src/assets/img/bg.jpg');
 background-position: fixed;
 background-size: 100%;
+background-repeat: no-repeat;
 min-height: -webkit-fill-available;
+/* margin: auto; */
 }
 
 button{
   margin-top:3rem;
   margin-left: 18rem;
-  /* width:5rem; */
   height:3rem;
 }
 
@@ -29,21 +29,43 @@ button:hover{
 
 @media(max-width: 600px){
   .play{
-    background-image: url('/src/assets/img/3.jpg');
+    background-image: url('/src/assets/img/p6.jpg');
     background-position: fixed;
     background-size: 100%;
+    min-height: -webkit-fill-available;
+    /* margin: auto; */
+    }
+
+  button{
+   margin-top:2rem;
+   /* margin-left: 8rem; */
+   height:3rem;
+   margin-left: 40%;
+   background-color: black;
+   color: white;
+  }
+
+  /* button:hover{
+    background:rgb(238, 122, 87);
+    color:white;
+  } */
+}
+
+@media(max-width: 768px){
+  .play{
+    background-image: url('/src/assets/img/p6.jpg');
+    background-position: fixed;
+    background-size:cover;
+    height: 100%;
     min-height: -webkit-fill-available;
     }
 
   button{
    margin-top:2rem;
-   margin-left: 8rem;
-  /* width:5rem; */
+   /* margin-left: 8rem; */
    height:3rem;
-  }
-
-  button:hover{
-    background:rgb(238, 122, 87);
-    color:white;
+   margin-left: 40%;
+   background-color: black;
+   color: white;
   }
 }
