--- a/src/styles.css
+++ b/src/styles.css
@@ -4,26 +4,30 @@
 
 body{
   background-image: url('/src/assets/img/bg.jpg');
-  background-color: black;
   background-position: fixed;
   background-size:cover;
+  background-repeat: no-repeat;
+  height: fit-content;
 }
 
 @media(max-width: 768px){
   body{
-    background-image: url('/src/assets/img/bg.jpg');
-    background-color: black;
+    background-image: url('/src/assets/img/p6.jpg');
     background-position: fixed;
-    background-size:  100%;
+    background-size:100%;
+    height: fit-content;
+    background-repeat: no-repeat;
+    /* background-color: #DE541E; */
   }
 }
 
-
- @media(max-width: 600px){
+@media(max-width: 600px){
   body{
-    background-image: url('/src/assets/img/3.jpg');
-    background-color: black;
+    background-image: url('/src/assets/img/p6.jpg');
+    /* background-color:#DE541E; */
     background-position: fixed;
     background-size:cover;
+    height: fit-content;
+    /* background-size: 0%; */
   }
 }
