--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -24,7 +24,7 @@
 
       <mat-grid-list cols="2" rowHeight="5:1">
         <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
-        <mat-grid-tile>{{forignuser}}:<br>{{ forignUserScore }}</mat-grid-tile>
+        <mat-grid-tile>{{otherUser}}:<br>{{ otherUserScore }}</mat-grid-tile>
       </mat-grid-list>
 
 </div>
