--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -4,12 +4,7 @@ margin-left:5rem;
 }
 
 .play{
-background-image: url('/src/assets/img/bg.jpg');
-background-position: fixed;
-background-size: 100%;
-background-repeat: no-repeat;
-min-height: -webkit-fill-available;
-/* margin: auto; */
+background-color: #05668D;
 }
 
 button{
@@ -19,7 +14,7 @@ button{
 }
 
 button:hover{
-  background:rgb(238, 122, 87);
+  /* background:rgb(238, 122, 87); */
   color:white;
 }
 
@@ -27,45 +22,17 @@ button:hover{
   margin-top:1rem;
 }
 
-@media(max-width: 600px){
-  .play{
-    background-image: url('/src/assets/img/p6.jpg');
-    background-position: fixed;
-    background-size: 100%;
-    min-height: -webkit-fill-available;
-    /* margin: auto; */
-    }
-
-  button{
-   margin-top:2rem;
-   /* margin-left: 8rem; */
-   height:3rem;
-   margin-left: 40%;
-   background-color: black;
-   color: white;
-  }
-
-  /* button:hover{
-    background:rgb(238, 122, 87);
-    color:white;
-  } */
-}
-
 @media(max-width: 768px){
   .play{
-    background-image: url('/src/assets/img/p6.jpg');
-    background-position: fixed;
-    background-size:cover;
-    height: 100%;
-    min-height: -webkit-fill-available;
+    background-color: #F0F3BD;
     }
 
   button{
-   margin-top:2rem;
+   margin-top:3rem;
    /* margin-left: 8rem; */
    height:3rem;
    margin-left: 40%;
-   background-color: black;
+   background-color: #00A896;
    color: white;
   }
 }
