--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -17,7 +17,7 @@
   background-color: aqua;
   background-image: url('/src/assets/img/ques.jpg');
   opacity: 0;
-  background-size: cover;
+  background-size: contain;
   margin-left:10rem;
   border-bottom:5rem;
   font-family: 'Roboto', sans-serif;
@@ -28,7 +28,7 @@
  height: 5rem;
  /* background-color: rgb(166, 255, 0); */
  background-color: transparent;
- background-size: cover;
+ background-size: contain;
  margin-left:5%;
  /* border-bottom:5rem; */
  color: white;
@@ -83,12 +83,12 @@ img{
  @media(max-width:600px){
   .quiz{
     width:80%;
-    height: 20rem;
-    /* background-color: aqua; */
-    background-image: url('/src/assets/img/ques.jpg');
-    background-size: cover;
-    margin-left:2rem;
-    border-bottom:1rem;
+    /* height: 20rem; */
+    height: 100%;
+    /* background-image: url('/src/assets/img/p6.jpg'); */
+    /* background-size: contain; */
+    /* margin-left:2rem;
+    border-bottom:1rem; */
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
    }
@@ -96,7 +96,7 @@ img{
     width:80%;
     height: 5rem;
     background-color:transparent;
-    background-size: cover;
+    background-size: contain;
     margin-left:2rem;
     color:black;
     font-size: 20px;
@@ -143,6 +143,6 @@ img{
   img{
     margin-left: 25%
   }
-
+ 
  }
 
