--- a/src/styles.css
+++ b/src/styles.css
@@ -3,31 +3,34 @@
 
 
 body{
-  background-image: url('/src/assets/img/bg.jpg');
+  /* background-image: url('/src/assets/img/bg.jpg');
   background-position: fixed;
   background-size:cover;
   background-repeat: no-repeat;
-  height: fit-content;
+  height: fit-content; */
+  /* background-color: #05668D;
+   */
+   background-color: #F0F3BD;
 }
 
 @media(max-width: 768px){
   body{
-    background-image: url('/src/assets/img/p6.jpg');
+    background-color: #F0F3BD;
+    /* background-image: url('/src/assets/img/p6.jpg');
     background-position: fixed;
     background-size:100%;
     height: fit-content;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     /* background-color: #DE541E; */
   }
 }
 
 @media(max-width: 600px){
   body{
-    background-image: url('/src/assets/img/p6.jpg');
-    /* background-color:#DE541E; */
-    background-position: fixed;
+    background-color: #F0F3BD;
+    /* background-image: url('/src/assets/img/p6.jpg');
     background-size:cover;
-    height: fit-content;
-    /* background-size: 0%; */
+    height: 100%;
+    min-height: -webkit-fill-available; */
   }
 }
