--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -1,25 +1,52 @@
-mat-list-item{
+/* mat-list-item{
 margin-bottom: 5rem;
 margin-left:5rem;
-}
+} */
+@media(min-width:769px){
 
-.play{
-background-color: #05668D;
-}
+  .play{
+    background-color: #F0F3BD;
+    display: flex;
+    height:100vh;
+  }
+  
+  .logo{
+    flex:2;
+    background-color: #F0F3BD;
+    background-image: url('/src/assets/img/logo3.png');
+    background-size: 400px 410px;
+    background-position: 45%;
+    /* width: 241px;
+    height: 241px; */
+    background-repeat: no-repeat;
+    /* margin: auto; */
+  }
+
+  .players{
+    flex:1;
+    background-color: #05668D;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 
 button{
-  margin-top:3rem;
-  margin-left: 18rem;
+  /* margin-top:3rem;
+  margin-left: 10rem; */
+  margin-top:20%;
+  margin-left: 40%;
   height:3rem;
-}
-
-button:hover{
-  /* background:rgb(238, 122, 87); */
-  color:white;
+  background-color: #02C39A;
+  color: white;
+  font-style: bold;
+  font-size: 25px;
+  width: 40%;
 }
 
 .numberOfPlayers{
   margin-top:1rem;
+}
+
 }
 
 @media(max-width: 768px){
