--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -11,7 +11,7 @@
   margin-right: 40%;
 }
 
-.questions{
+/* .questions{
   width:80%;
   height: 30rem;
   background-color: aqua;
@@ -20,9 +20,9 @@
   background-size: cover;
   margin-left:10rem;
   border-bottom:5rem;
-  color: white;
+  color: black;
   font-family: 'Roboto', sans-serif;
- }
+ } */
 
 /* .abc
 {
