--- a/src/app/three-players/three-players.component.html
+++ b/src/app/three-players/three-players.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="sleep()" style="background-color:black; color:white;" >
+<button mat-raised-button (click)="sleep()" >
   I want to play
 </button>
 
