--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -1,26 +1,27 @@
-<input *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
-<button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
+<input class="topic" *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<br>
+<button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
-<div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
+<div class="opponent" *ngIf="!start && Waiting" >
    Waiting for opponent to join...
 </div>
 
 
 
 <div *ngIf="start && !gameOver">
-      <!-- <mat-card class="questions">
+      <mat-card class="questions">
          <h2>{{currentQuestion.questionGiven}}</h2>
-         <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button>
+         <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
          <br>
-         <mat-radio-group class="radio-group" [disabled]="isDisabled">
+         <mat-radio-group class="options" [disabled]="isDisabled">
             <mat-radio-button class="radio-button"  *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId" style="color:white" (click)="scoreCalculator(o); isDisabled=true">
                 {{o.optionGiven}}<br>
              </mat-radio-button>
          </mat-radio-group>
          <br>
-         <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button>
-      </mat-card> -->
-      <mat-card>{{this.currentQuestion}}</mat-card>
+         <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
+      </mat-card>
+      <!-- <mat-card>{{this.currentQuestion}}</mat-card> -->
 
       <mat-grid-list cols="2" rowHeight="5:1">
         <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
@@ -29,28 +30,29 @@
 
 </div>
 
-<mat-card *ngIf="!start && gameOver">
+<mat-card class="noOpponent" *ngIf="!start && gameOver">
   Players not found...Go Back
-  <button mat-raised-button  color="primary" [routerLink]="['/play']">
+  <button class="back" mat-raised-button  color="primary" [routerLink]="['/play']">
     Go Back</button>
 </mat-card>
 
 <div id="clock" *ngIf="start && !gameOver">
   {{counter}}
 </div>
-
+<div class="result">
 <mat-card *ngIf="start && gameOver && score>forignUserScore">You Win<br>
-    <button mat-raised-button color="primary" [routerLink]="['/play']">
+    <button mat-raised-button [routerLink]="['/play']">
         Go Back</button>
 </mat-card>
 <mat-card *ngIf="start && gameOver && score<forignUserScore">Opponent Wins<br>
-    <button mat-raised-button  color="primary" [routerLink]="['/play']">
+    <button mat-raised-button [routerLink]="['/play']">
         Go Back</button>
 </mat-card>
 <mat-card *ngIf="start && gameOver && score===forignUserScore">It's a Draw<br>
-    <button mat-raised-button  color="primary" [routerLink]="['/play']">
+    <button mat-raised-button [routerLink]="['/play']">
         Go Back</button>
 </mat-card>
+</div>
 <!-- <script> -->
 <!-- function disableButton(){ -->
   <!-- console.log("radio-button disabled"); -->
