--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -1,40 +1,37 @@
-<input *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<input *ngIf="!TopicSelected" type="text" name="EnterTopic" [(ngModel)]="topic">
 <button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
 <div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
-   Waiting for opponent to join...
+  Waiting for opponent to join...
 </div>
 
 
 
 <div *ngIf="start && !gameOver">
-      <mat-card class="questions">
-         <h2 style="color:black; size:40px">{{currentQuestion.question}}</h2>
-         <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
-         <br>
-         <mat-radio-group class="radio-group" [disabled]="isDisabled">
-            <mat-radio-button class="radio-button"  *ngFor="let o of currentQuestion?.otherOptionsList" [value]="o" style="color:#000000" (click)="scoreCalculator(o); isDisabled=true">
-                {{o.option}}<br>
-             </mat-radio-button>
-             <mat-radio-button class="radio-button">
-              {{currentQuestion.correctOption}}<br>
-           </mat-radio-button>
-         </mat-radio-group>
-         <br>
-         <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
-      </mat-card>
-      <!-- <mat-card>{{this.currentQuestion}}</mat-card> -->
+  <mat-card class="questions">
+    <h2 style="color:black; size:40px">{{currentQuestion.question}}</h2>
+    <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
+    <br>
+    <mat-radio-group class="radio-group">
+      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" style="color:#000000" (click)="scoreCalculator(o)">
+        {{o.optionName}}<br>
+      </mat-radio-button>
+    </mat-radio-group>
+    <br>
+    <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
+  </mat-card>
+  <!-- <mat-card>{{this.currentQuestion}}</mat-card> -->
 
-      <mat-grid-list cols="2" rowHeight="5:1">
-        <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
-        <mat-grid-tile>{{otherUser}}:<br>{{ otherUserScore }}</mat-grid-tile>
-      </mat-grid-list>
+  <mat-grid-list cols="2" rowHeight="5:1">
+    <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
+    <mat-grid-tile>{{otherUser}}:<br>{{ otherUserScore }}</mat-grid-tile>
+  </mat-grid-list>
 
 </div>
 
 <mat-card *ngIf="!start && gameOver">
   Players not found...Go Back
-  <button mat-raised-button  color="primary" [routerLink]="['/play']">
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
     Go Back</button>
 </mat-card>
 
@@ -42,21 +39,21 @@
   {{counter}}
 </div>
 
-<mat-card *ngIf="start && gameOver && score>forignUserScore">You Win<br>
-    <button mat-raised-button color="primary" [routerLink]="['/play']">
-        Go Back</button>
+<mat-card *ngIf="start && gameOver && score>otherUserScore">You Win<br>
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
+    Go Back</button>
 </mat-card>
-<mat-card *ngIf="start && gameOver && score<forignUserScore">Opponent Wins<br>
-    <button mat-raised-button  color="primary" [routerLink]="['/play']">
-        Go Back</button>
+<mat-card *ngIf="start && gameOver && score<otherUserScore">Opponent Wins<br>
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
+    Go Back</button>
 </mat-card>
-<mat-card *ngIf="start && gameOver && score===forignUserScore">It's a Draw<br>
-    <button mat-raised-button  color="primary" [routerLink]="['/play']">
-        Go Back</button>
+<mat-card *ngIf="start && gameOver && score===otherUserScore">It's a Draw<br>
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
+    Go Back</button>
 </mat-card>
 <!-- <script> -->
 <!-- function disableButton(){ -->
-  <!-- console.log("radio-button disabled"); -->
+<!-- console.log("radio-button disabled"); -->
 
 <!-- } -->
 <!-- </script> -->
