--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -2,7 +2,7 @@
   Let's Play </button>
 <!-- <div> -->
   <mat-card class="quiz">
-       <h2 class="question"> {{currentQuestion?.questionGiven}} </h2><br>
+       <h2 class="question"> {{currentQuestion.question}} </h2><br>
        <mat-radio-group class="options">
            <mat-radio-button
            *ngFor="let option of currentQuestion?.questionOptions"
