--- a/src/app/four-players/four-players.component.html
+++ b/src/app/four-players/four-players.component.html
@@ -1,47 +1,43 @@
-<button mat-raised-button (click)="sleep()" style="background-color:black; color:white;" >
-  I want to play
- </button>
+<input *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
-<button mat-raised-button *ngIf="users_found && !start"  color="primary" (click)="showQuestions()">Let's Play</button>
-<div class="abc" *ngIf="counter>=1 && !gameOver">
-
+<div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
+   Waiting for opponent to join...
+</div>
+<div *ngIf="start && !gameOver">
   <mat-card class="questions">
-    <h2>{{currentQuestion.questionGiven}}</h2><br>
-    <mat-radio-group class="radio-group">
-        <mat-radio-button class="radio-button" *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId" style="color:white" (click)="scoreCalculator(o)">
-          {{o.optionGiven}}<br>
-        </mat-radio-button>
-    </mat-radio-group>
-     <br>
+      <h2 >{{currentQuestion.question}}</h2><br>
+      <mat-radio-group class="radio-group">
+         <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
+           {{o.optionName}}<br>
+          </mat-radio-button>
+      </mat-radio-group>
+      <br>
   </mat-card>
 
-  <!-- <mat-card class="sc">
-      <mat-card id="divMessages1" class="messages" style="color:black">
-          {{username}}:  {{ score }}
-      </mat-card>
-      <mat-card id="divMessages1" class="messages" style="color:black">
-          {{arr[0]}}:  {{ score1[0] }}
-      </mat-card>
-      <mat-card id="divMessages1" class="messages" style="color:black">
-          {{arr[1]}}:  {{ score1[1] }}
-      </mat-card>
-      <mat-card id="divMessages1" class="messages" style="color:black">
-          {{arr[2]}}:  {{ score1[2] }}
-      </mat-card>
-  </mat-card> -->
 
-  <mat-grid-list cols="4" rowHeight="5:1">
+  <mat-grid-list cols="3" rowHeight="5:1">
     <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[0]}}:<br>{{ score1[0] }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[1]}}:<br>{{ score1[1] }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[2]}}:<br>{{ score1[2] }}</mat-grid-tile>
+    <!-- <mat-grid-tile>{{arr[0]}}:<br>{{ score1[0] }}</mat-grid-tile>
+    <mat-grid-tile>{{arr[1]}}:<br>{{ score1[1] }}</mat-grid-tile> -->
   </mat-grid-list>
 
+
 </div>
 
-<mat-card *ngIf="gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
+<mat-card *ngIf="!start && gameOver">
+  Players not found...Go Back
+  <button mat-raised-button  color="primary" [routerLink]="['/play']">
+    Go Back</button>
+</mat-card>
 
-<div id="clock" *ngIf="!gameOver">
-{{counter}}
-</div>
+<div id="clock" *ngIf="start && !gameOver">
+  {{counter}}
+  </div>
+
+<mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
+<!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
+<mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
+
+
 
