--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -8,50 +8,43 @@
   font-size: 25px;
   width: 30%;
 }
-#clock{
-  width:10rem;
-  background-color: black;
-  font-size: 2rem;
-  color:white;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  margin-left: 40%;
-  margin-right: 40%;
- }
- .quiz{
+.questions{
   width:80%;
   /* opacity: 0; */
   margin: auto;
   font-size: 25px;
- }
- .question{
-  color:black;
+  color:white;
+  background-color:#02C39A;
 }
 .options{
   display: inline-flex;
   flex-direction: column;
-  color:black;
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
+  color:white;
+  background-color:#02C39A;
   }
- 
+
 button{
   margin-top:3rem;
   margin-left: 18rem;
    /* width:5rem; */
   height:3rem;
  }
- 
+
  button:hover{
    background:rgb(238, 122, 87);
    color:white;
  }
 
  .score{
+  background-color:#028090;
+  color: white;
   width:80%;
+  /* opacity: 0; */
   margin: auto;
-  height: 5rem;
-  color: black;
-  font-size: 40px;
+  text-align: center;
   }
 
   .final{
@@ -60,22 +53,38 @@ button{
     margin-top:13rem;
     margin-left:15rem;
     }
-   
+
    #finalScore{
       color: blue;
       font-size: 40px;
    }
    .goBack{
-   margin-left: 10%;
-   background-color: #02C39A;
-   color: white;
-   font-style: bold;
-   font-size: 25px;
-   width: 30%;
+    margin-left: 30%;
+    height:3rem;
+    background-color: #02C39A;
+    color: white;
+    font-style: bold;
+    font-size: 25px;
+    width: 30%;
     }
-   
+
    img{
      opacity: 0;
+   }
+
+   #clock{
+    width:30%;
+    height: 3rem;
+    margin: auto;
+    background-color:#02C39A;
+    /* background-color: #05668D; */
+    font-size: 20px;
+    color:white;
+    text-align: center;
+    /* position: fixed; */
+    /* bottom: 0;
+    margin-left: 40%;
+    margin-right: 40%; */
    }
 
 
@@ -86,7 +95,7 @@ button{
       font-size: 15px;
       width: 30%;
      }
-    .quiz{
+    .questions{
       font-size: 15px;
     }
     /* button{
