--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,10 +1,9 @@
-
 <div class="homepage">
-   <div class="logo"></div>
+  <div class="logo"></div>
   <div class="buttons">
-  <button mat-raised-button class="login" (click)="openDialog1()"><b>Login</b></button>
-  <!-- <br> -->
-  <button mat-raised-button  (click)="socialSignIn('google')"><b>Login Using Google</b></button>
-  <br>
-</div>
+    <button mat-raised-button class="login" (click)="openDialog1()">Login</button>
+    <!-- <br> -->
+    <button mat-raised-button (click)="socialSignIn('google')">Login Using Google</button>
+    <br>
+  </div>
 </div>
