--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -23,7 +23,7 @@
     <mat-card-title id="finalScore">Your Final Score is {{score}} </mat-card-title>
        <button mat-raised-button class="goBack" color="primary" [routerLink]="['/play']">Go Back</button>
        <br><br>
-       <img mat-card-lg-image src="/src/assets/img/q8.jpg">
+       <!-- <img mat-card-lg-image src="/src/assets/img/q8.jpg"> -->
     </mat-card>
 </div>
 
