--- a/src/app/four-players/four-players.component.html
+++ b/src/app/four-players/four-players.component.html
@@ -1,21 +1,22 @@
-<button mat-raised-button (click)="sleep()" style="background-color:black; color:white;" >
-  I want to play
- </button>
+<button mat-raised-button (click)="sleep()" style="background-color:black; color:white;">
+    I want to play
+</button>
 
-<button mat-raised-button *ngIf="users_found && !start"  color="primary" (click)="showQuestions()">Let's Play</button>
+<button mat-raised-button *ngIf="users_found && !start" color="primary" (click)="showQuestions()">Let's Play</button>
 <div class="abc" *ngIf="counter>=1 && !gameOver">
 
-  <mat-card class="questions">
-    <h2>{{currentQuestion.questionGiven}}</h2><br>
-    <mat-radio-group class="radio-group">
-        <mat-radio-button class="radio-button" *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId" style="color:white" (click)="scoreCalculator(o)">
-          {{o.optionGiven}}<br>
-        </mat-radio-button>
-    </mat-radio-group>
-     <br>
-  </mat-card>
+    <mat-card class="questions">
+        <h2>{{currentQuestion.questionGiven}}</h2><br>
+        <mat-radio-group class="radio-group">
+            <mat-radio-button class="radio-button" *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId"
+                style="color:white" (click)="scoreCalculator(o)">
+                {{o.optionGiven}}<br>
+            </mat-radio-button>
+        </mat-radio-group>
+        <br>
+    </mat-card>
 
-  <!-- <mat-card class="sc">
+    <!-- <mat-card class="sc">
       <mat-card id="divMessages1" class="messages" style="color:black">
           {{username}}:  {{ score }}
       </mat-card>
@@ -30,18 +31,17 @@
       </mat-card>
   </mat-card> -->
 
-  <mat-grid-list cols="4" rowHeight="5:1">
-    <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[0]}}:<br>{{ score1[0] }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[1]}}:<br>{{ score1[1] }}</mat-grid-tile>
-    <mat-grid-tile>{{arr[2]}}:<br>{{ score1[2] }}</mat-grid-tile>
-  </mat-grid-list>
+    <mat-grid-list cols="4" rowHeight="5:1">
+        <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
+        <mat-grid-tile>{{arr[0]}}:<br>{{ score1[0] }}</mat-grid-tile>
+        <mat-grid-tile>{{arr[1]}}:<br>{{ score1[1] }}</mat-grid-tile>
+        <mat-grid-tile>{{arr[2]}}:<br>{{ score1[2] }}</mat-grid-tile>
+    </mat-grid-list>
 
 </div>
 
 <mat-card *ngIf="gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
 
 <div id="clock" *ngIf="!gameOver">
-{{counter}}
+    {{counter}}
 </div>
-
