--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -5,6 +5,9 @@
   display: flex;
   height:100vh;
   /* justify-content: space-between; */
+   /* background-image: url('/src/assets/img/image1.jpg');
+   background-repeat: no-repeat;
+   background-size: cover; */
 }
 
 .logo{
@@ -17,6 +20,7 @@
   height: 241px; */
   background-repeat: no-repeat;
   /* margin: auto; */
+
 }
 
 .buttons{
@@ -25,6 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  /* opacity: 0; */
 }
 
 button{
@@ -60,6 +65,7 @@ button{
     background-color: #F0F3BD;
     height: fit-content;
     margin-top: 10%;
+    /* opacity: 0; */
   }
 
   button{
