--- a/src/app/three-players/three-players.component.html
+++ b/src/app/three-players/three-players.component.html
@@ -1,18 +1,19 @@
-<input *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<input *ngIf="!TopicSelected" type="text" name="EnterTopic" [(ngModel)]="topic">
 <button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
 <div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
-   Waiting for opponent to join...
+  Waiting for opponent to join...
 </div>
 <div *ngIf="start && !gameOver">
   <mat-card class="questions">
-      <h2 >{{currentQuestion.questionGiven}}</h2><br>
-      <mat-radio-group class="radio-group">
-         <mat-radio-button class="radio-button" *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId" style="color:white" (click)="scoreCalculator(o)">
-           {{o.optionGiven}}<br>
-          </mat-radio-button>
-      </mat-radio-group>
-      <br>
+    <h2>{{currentQuestion.questionGiven}}</h2><br>
+    <mat-radio-group class="radio-group">
+      <mat-radio-button class="radio-button" 
+          *ngFor="let o of currentQuestion?.questionOptions" [value]="o.optionsId"
+           (click)="scoreCalculator(o)">  {{o.optionGiven}}<br>
+      </mat-radio-button>
+    </mat-radio-group>
+    <br>
   </mat-card>
 
 
@@ -27,17 +28,14 @@
 
 <mat-card *ngIf="!start && gameOver">
   Players not found...Go Back
-  <button mat-raised-button  color="primary" [routerLink]="['/play']">
+  <button mat-raised-button color="primary" [routerLink]="['/play']">
     Go Back</button>
 </mat-card>
 
 <div id="clock" *ngIf="start && !gameOver">
   {{counter}}
-  </div>
+</div>
 
 <mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
 <!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
 <mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
-
-
-
