--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -40,24 +40,30 @@ button{
 
  .score{
   background-color:#028090;
-  color: white;
+  color: black;
   width:80%;
   /* opacity: 0; */
   margin: auto;
   text-align: center;
   }
 
-  .final{
-    width:30%;
+  /* .finalScore{ */
+    /* width:30%;
     height:30%;
     margin-top:13rem;
-    margin-left:15rem;
-    }
+    margin-left:15rem; */
+    /* width:80%; */
+    /* opacity: 0; */
+    /* margin-top: 10rem; */
+    /* font-size: 65px; */
+    /* color:black; */
+    /* background-color:#02C39A; */
+    /* } */
 
-   #finalScore{
+   /* #finalScore{
       color: blue;
       font-size: 40px;
-   }
+   } */
    .goBack{
     margin-left: 30%;
     height:3rem;
@@ -65,7 +71,7 @@ button{
     color: white;
     font-style: bold;
     font-size: 25px;
-    width: 30%;
+    width: 60%;
     }
 
    img{
