--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -3,7 +3,9 @@
 
 <button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 <!-- <div> -->
-<div *ngIf="start && !gameOver">
+    <mat-progress-bar *ngIf ="!start && TopicSelected" mode="indeterminate"></mat-progress-bar>
+    <div *ngIf ="!start && TopicSelected">Starting Quiz...</div>
+<div *ngIf="start && !gameOver" class="md-elevation-z24">
   <mat-card class="questions">
     {{currentQuestion.question}}
     <!-- <button class="end" *ngIf="!gameOver" mat-raised-button (click)="endGame()">End Game</button> -->
@@ -15,21 +17,21 @@
       </mat-radio-button>
     </mat-radio-group>
   </mat-card>
+  </div>
 
   <mat-card *ngIf="start && !gameOver" class="score">
     Your Score is {{score}}
   </mat-card>
   <!-- </div> -->
 
-<div *ngIf="gameOver" class="gameover">
-  <mat-card class="final">
-    <mat-card-title id="finalScore">Your Final Score is {{score}} </mat-card-title>
-       <button mat-raised-button class="goBack" color="primary" [routerLink]="['/play']">Go Back</button>
-       <br><br>
-       <!-- <img mat-card-lg-image src="/src/assets/img/q8.jpg"> -->
-    </mat-card>
-  </div>
 
-  <div id="clock" *ngIf="start && !gameOver">
-    {{counter}}
-  </div>
+  <mat-card class="gameover"  *ngIf="start && gameOver" >
+    <mat-card-title >Your Final Score is {{score}} </mat-card-title>
+       <button mat-raised-button class="goBack" [routerLink]="['/play']">Go Back</button>
+       <br><br>
+    </mat-card>
+
+  <progress-bar  *ngIf="start && !gameOver" [progress]="counter*10"
+    [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67',
+    '60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}">
+  </progress-bar>
