--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -17,6 +17,15 @@
   font-size: 25px;
   width: 40%;
 } */
+
+.waiting {
+  background-image: url('/src/assets/img/preloader.gif');
+  background-repeat: no-repeat;
+  height:10rem;
+  /* opacity:0; */
+  margin-top:30%;
+  margin-left:40%;
+}
 .questions{
   width:80%;
   /* opacity: 0; */
